components/manifests/base/ambient-api-server-db.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ambient-api-server-db
  labels:
    app: ambient-api-server
    component: database
spec:
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: ambient-api-server
    component: database
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ambient-api-server-db
  labels:
    app: ambient-api-server
    component: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ambient-api-server
      component: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ambient-api-server
        component: database
    spec:
      containers:
        - name: postgresql
          image: registry.redhat.io/rhel9/postgresql-16:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 120
            timeoutSeconds: 10
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U $POSTGRESQL_USER -d $POSTGRESQL_DATABASE -h localhost -p 5432
            initialDelaySeconds: 5
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: ambient-api-server-db-data
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: ambient-api-server-db-data
          persistentVolumeClaim:
            claimName: ambient-api-server-db-data
