components/manifests/base/ambient-api-server-grpc-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ambient-api-server
    component: api
  name: ambient-api-server-grpc
spec:
  port:
    targetPort: grpc
  tls:
    termination: passthrough
  to:
    kind: Service
    name: ambient-api-server
    weight: 100
  wildcardPolicy: None
