components/manifests/base/ambient-api-server-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ambient-api-server
  labels:
    app: ambient-api-server
    component: api
spec:
  to:
    kind: Service
    name: ambient-api-server
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ambient-api-server-grpc
  labels:
    app: ambient-api-server
    component: grpc
spec:
  to:
    kind: Service
    name: ambient-api-server
  port:
    targetPort: grpc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
